Fix to display proper Celsius values in the table and align page title

--- a/apps/weather-forecast/src/app/components/forecasts-search/forecasts-search.component.scss
+++ b/apps/weather-forecast/src/app/components/forecasts-search/forecasts-search.component.scss
@@ -21,6 +21,7 @@
 		// We can customize when the the button timePeriodSelected is active
 		&.active {
 			background-color: $primaryColor;
+			color: white;
 			box-shadow: none, inset 0 0 1rem rgba(0, 0, 0, 0.25);
 		}
 		&:not(.active) {
